Added tenant id.

--- a/deploy/helm/minikube-esri-dev.yml
+++ b/deploy/helm/minikube-esri-dev.yml
@@ -41,14 +41,18 @@ web-server:
   featureFlags:
     cataloguing: true
 
-#connectors:
-#  includeCronJobs: false
-#  config:
-#    - image:
-#        name: "magda-esri-connector"
-#      id: dga
-#      name: "data.gov.au"
-#      sourceUrl: "https://beta.portal.data.nsw.gov.au/arcgis"
-#      pageSize: 1000
-#      schedule: "0 * * * *"
-#      ignoreHarvestSources: ["*"]
+connectors:
+  includeCronJobs: false
+  config:
+    - image:
+        name: "magda-esri-portal-connector"
+      id: esri-nsw
+      name: "beta.portal.data.nsw.gov.au/arcgis"
+      sourceUrl: "https://beta.portal.data.nsw.gov.au/arcgis"
+      pageSize: 1000
+      registryUrl: "http://registry-api"
+      arcgisUserId: "xxxxx"
+      arcgisUserPassword: "xxxxx"
+      userId: "00000000-0000-4000-8000-000000000000"
+      schedule: "0 * * * *"
+      ignoreHarvestSources: ["*"]
