use a forked version papa parse to handle non-standard server partial download behaviours

--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -72,7 +72,7 @@
     "@storybook/addons": "^3.3.3",
     "@storybook/react": "^3.2.17",
     "@types/debounce-promise": "^3.1.1",
-    "@types/papaparse": "^5.0.0",
+    "@types/papaparse": "^5.0.1",
     "@types/react": "^16.8.17",
     "@types/react-autosuggest": "^9.3.9",
     "@types/react-dates": "^17.1.5",
@@ -102,7 +102,7 @@
     "memoize-one": "^3.1.1",
     "npm-run-all": "^4.0.1",
     "openlayers": "^4.1.1",
-    "papaparse": "^5.0.0",
+    "papaparse": "magda-io/PapaParse#fix-range-header-processing",
     "pretty-date": "^0.2.0",
     "prop-types": "^15.6.1",
     "query-string": "^4.3.4",
