--- a/magda-scss-compiler/Dockerfile
+++ b/magda-scss-compiler/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:8
-ADD component/setup.sh /setup.sh
+# ADD component/setup.sh /setup.sh
 RUN mkdir -p /usr/src/app
 COPY . /usr/src/app
+
 WORKDIR /usr/src/app/component
-RUN ["/setup.sh"]
-ENTRYPOINT [ "node", "/usr/src/app/component/dist/index.js" ]
+# RUN ["/setup.sh"]
+# ENTRYPOINT [ "node", "/usr/src/app/component/dist/index.js" ]
