--- a/deploy/helm/magda/charts/web-server/values.yaml
+++ b/deploy/helm/magda/charts/web-server/values.yaml
@@ -21,3 +21,6 @@ featureFlags: {}
 vocabularyApiEndpoints: []
 defaultContactEmail: "mail@example.com"
 custodianOrgLevel: 2
+maxChartProcessingRows: 20000
+maxTableProcessingRows: 200
+csvLoaderChunkSize: 614400
