--- a/deploy/helm/magda/charts/web-server/values.yaml
+++ b/deploy/helm/magda/charts/web-server/values.yaml
@@ -23,4 +23,5 @@ defaultContactEmail: "mail@example.com"
 custodianOrgLevel: 2
 maxChartProcessingRows: 20000
 maxTableProcessingRows: 200
-csvLoaderChunkSize: 614400
+# default chunk size 2MB
+csvLoaderChunkSize: 2097152
