--- a/magda-esri-portal-connector/package.json
+++ b/magda-esri-portal-connector/package.json
@@ -12,7 +12,7 @@
     "dev": "run-typescript-in-nodemon src/index.ts",
     "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register --userId dummy --jwtSecret dummy --sourceUrl dummy --id test --name test-name --require tsconfig-paths/register \"src/test/**/*.spec.ts\"",
     "docker-build-local": "create-docker-context-for-node-component --build --push --tag auto --local",
-    "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto",
+    "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto --repository asia.gcr.io/terriajs-automated-deployment",
     "retag-and-push": "retag-and-push"
   },
   "author": "",
