--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -102,7 +102,7 @@
     "memoize-one": "^3.1.1",
     "npm-run-all": "^4.0.1",
     "openlayers": "^4.1.1",
-    "papaparse": "magda-io/PapaParse#fix-range-header-processing",
+    "papaparse": "magda-io/PapaParse#magda",
     "pretty-date": "^0.2.0",
     "prop-types": "^15.6.1",
     "query-string": "^4.3.4",
