updated worker CSP

--- a/deploy/helm/magda/charts/gateway/values.yaml
+++ b/deploy/helm/magda/charts/gateway/values.yaml
@@ -66,8 +66,12 @@ csp:
     - "''self''"
     - "''unsafe-inline''"
     - browser-update.org
+    - "blob:"
     objectSrc:
     - "''none''"
+    workerSrc:
+    - "''self''"
+    - "blob:"
 
 cors: 
   exposedHeaders:
