Get ArcGIS URL from auth secion.

--- a/deploy/helm/magda/charts/gateway/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/gateway/templates/deployment.yaml
@@ -39,8 +39,8 @@ spec:
 {{- if .Values.auth.arcgisClientId }}
             "--arcgisClientId", {{ .Values.auth.arcgisClientId | quote }},
 {{- end }}
-{{- if .Values.arcgisInstanceBaseUrl }}
-            "--arcgisInstanceBaseUrl", {{ .Values.arcgisInstanceBaseUrl | quote }},
+{{- if .Values.auth.arcgisInstanceBaseUrl }}
+            "--arcgisInstanceBaseUrl", {{ .Values.auth.arcgisInstanceBaseUrl | quote }},
 {{- end }}
 {{- if .Values.auth.googleClientId }}
             "--googleClientId", {{ .Values.auth.googleClientId | quote }},
