--- a/magda-gateway/package.json
+++ b/magda-gateway/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@magda/gateway",
   "description": "The public gateway to all of MAGDA, including the API and web front end.",
-  "version": "0.0.56-nsw-3",
+  "version": "0.0.56-nsw-3d",
   "license": "Apache-2.0",
   "scripts": {
     "build": "yarn run compile",
