Add admin_role policy default policy. Registry client also provides jwt when reading.

--- a/deploy/helm/minikube-esri-dev.yml
+++ b/deploy/helm/minikube-esri-dev.yml
@@ -28,6 +28,7 @@ gateway:
 
 registry-api:
   skipAuthorization: false
+  skipOpa: false
   recordPolicyId: "object.registry.record.esri_owner_groups"
   
 correspondence-api:
