Made esri org group name configurable.

--- a/deploy/helm/magda/charts/gateway/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/gateway/templates/deployment.yaml
@@ -42,11 +42,14 @@ spec:
 {{- if .Values.auth.arcgisInstanceBaseUrl }}
             "--arcgisInstanceBaseUrl", {{ .Values.auth.arcgisInstanceBaseUrl | quote }},
 {{- end }}
-{{- if .Values.auth.googleClientId }}
-            "--googleClientId", {{ .Values.auth.googleClientId | quote }},
-{{- end }}
 {{- if .Values.auth.aafClientUri}}
             "--aafClientUri", {{ .Values.auth.aafClientUri| quote }},
+{{- end }}
+{{- if .Values.auth.esriOrgGroup}}
+            "--esriOrgGroup", {{ .Values.auth.esriOrgGroup| quote }},
+{{- end }}
+{{- if .Values.auth.googleClientId }}
+            "--googleClientId", {{ .Values.auth.googleClientId | quote }},
 {{- end }}
 {{- if .Values.auth.vanguardWsFedIdpUrl }}
             "--vanguardWsFedIdpUrl", {{ .Values.auth.vanguardWsFedIdpUrl | quote }},
