--- a/deploy/helm/minikube-esri-dev.yml
+++ b/deploy/helm/minikube-esri-dev.yml
@@ -24,10 +24,12 @@ gateway:
   auth:
     arcgisInstanceBaseUrl: "https://beta.portal.data.nsw.gov.au/arcgis"
     arcgisClientId: "xU0LNIvRZS2VUbFS"
+    esriOrgGroup: "esri-nsw-authenticated-user-group"
 
 
 registry-api:
   skipAuthorization: false
+  skipOpa: false
   recordPolicyId: "object.registry.record.esri_owner_groups"
   
 correspondence-api:
@@ -47,6 +49,7 @@ connectors:
       id: esri-nsw
       name: "beta.portal.data.nsw.gov.au/arcgis"
       sourceUrl: "https://beta.portal.data.nsw.gov.au/arcgis"
+      esriOrgGroup: "esri-nsw-authenticated-user-group"
       pageSize: 1000
       registryUrl: "http://registry-api"
       arcgisUserId: "xxxxx"
