Updated landing page and readme.

--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "build-changed-scala": "bash -c \"sbt deployLocalOnChange\"",
     "build-changed": "yarn run build-changed-ts && yarn run build-changed-scala",
     "prettier": "prettier --write '**/*.js' '**/*.ts' '**/*.json' '!**/regions/**'",
-    "precommit": "pretty-quick --staged",
     "retag-and-push": "lerna run retag-and-push --stream",
     "eslint": "./node_modules/.bin/eslint magda-web-client/src/",
     "create-secrets": "create-secrets",
@@ -87,5 +86,10 @@
   },
   "dependencies": {
     "@gov.au/pancake-sass": "^2.3.7"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
