--- a/magda-registry-api/src/main/resources/application.conf
+++ b/magda-registry-api/src/main/resources/application.conf
@@ -80,3 +80,6 @@ opa {
     baseUrl = "http://localhost:6104/v0/opa"
     recordPolicyId = "object.registry.record.owner_orgunit"
 }
+
+# whether validate received aspect data against aspect json schema
+validateJsonSchema = true
