First version of Terria minion.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "workspaces": [
     "deploy",
     "magda-*",
-    "scripts"
+    "scripts",
+    "terriajs",
+    "terriajs-cesium"
   ],
   "eslintIgnore": [
     "src/pancake/**"
