Fix TS compile problems, pass through jwt on RO services too.

--- a/magda-typescript-common/tsconfig-build.json
+++ b/magda-typescript-common/tsconfig-build.json
@@ -5,7 +5,8 @@
         "resolveJsonModule": true,
         "outDir": "dist",
         "baseUrl": ".",
-        "lib": ["es2015", "es2017", "dom"]
+        "lib": ["es2015", "es2017", "dom"],
+        "types": ["node", "express", "passport"]
     },
     "include": ["src"]
 }
