--- a/magda-minion-framework/tsconfig-build.json
+++ b/magda-minion-framework/tsconfig-build.json
@@ -3,7 +3,8 @@
     "compilerOptions": {
         "declaration": true,
         "outDir": "dist",
-        "baseUrl": "."
+        "baseUrl": ".",
+        "types": ["urijs"]
     },
     "include": ["src"]
 }
