--- a/magda-minion-terria/Dockerfile
+++ b/magda-minion-terria/Dockerfile
@@ -1,6 +1,6 @@
-FROM node:8
+FROM node:10
 
 RUN mkdir -p /usr/src/app
 COPY . /usr/src/app
 WORKDIR /usr/src/app/component
-ENTRYPOINT [ "node", "/usr/src/app/component/dist/index.js" ]
+ENTRYPOINT [ "node", "-r", "esm", "-r", "amd-loader", "/usr/src/app/component/dist/index.js", "--listenPort", "80" ]
