--- a/magda-minion-terria/tsconfig-build.json
+++ b/magda-minion-terria/tsconfig-build.json
@@ -1,10 +1,11 @@
 {
     "extends": "../tsconfig-global.json",
     "compilerOptions": {
-        "declaration": true,
+        "target": "es2018",
         "outDir": "dist",
         "baseUrl": ".",
         "allowJs": true,
+        "module": "esnext",
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
         "sourceMap": true,
@@ -14,12 +15,26 @@
         "noUnusedLocals": false,
         "noImplicitReturns": false,
         "noEmitOnError": false,
-        "strict": false,
-        "typeRoots": [
-            "./node_modules/@types",
-            "../node_modules/@types",
-            "../terriajs/lib/ThirdParty"
+        "strict": true,
+        // "typeRoots": [
+        //     "../terriajs/lib/ThirdParty",
+        //     "./node_modules/@types",
+        //     "../node_modules/@types"
+        // ],
+        "types": [
+            "mocha",
+            "cesium",
+            // "terriajs-cesium",
+            // "mapbox__point-geometry",
+            // "mapbox__vector-tile",
+            // "terriajs-html2canvas",
+            "urijs"
         ]
     },
     "include": ["src"]
+    // "references": [
+    //     { "path": "@magda/typescript-common" },
+    //     { "path": "@magda/minion-framework"},
+    //     { "path": "terriajs" }
+    // ]
 }
