--- a/magda-esri-portal-connector/tsconfig-build.json
+++ b/magda-esri-portal-connector/tsconfig-build.json
@@ -4,7 +4,9 @@
         "declaration": true,
         "outDir": "dist",
         "baseUrl": ".",
-        "lib": ["es2015", "es2017", "dom"]
+        "lib": ["es2015", "es2017", "dom"],
+        "types": ["mocha"],
+        "sourceMap": true
     },
     "include": ["src"]
 }
