--- a/magda-gateway/tsconfig-build.json
+++ b/magda-gateway/tsconfig-build.json
@@ -4,7 +4,8 @@
         "declaration": true,
         "outDir": "dist",
         "baseUrl": ".",
-        "lib": ["es2015", "es2017", "dom"]
+        "lib": ["es2015", "es2017", "dom"],
+        "types": ["mocha"]
     },
     "include": ["src"]
 }
