--- a/magda-gateway/package.json
+++ b/magda-gateway/package.json
@@ -15,8 +15,8 @@
     "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/*.spec.ts\""
   },
   "dependencies": {
-    "@magda/typescript-common": "^0.0.56-0",
     "@magda/tenant-api": "^0.0.56-0",
+    "@magda/typescript-common": "^0.0.56-0",
     "body-parser": "^1.13.2",
     "cheerio": "^0.22.0",
     "compression": "^1.7.2",
@@ -60,6 +60,7 @@
     "@types/ejs": "^2.3.33",
     "@types/escape-string-regexp": "^1.0.0",
     "@types/express": "^4.0.37",
+    "@types/express-session": "^1.15.15",
     "@types/http-proxy": "^1.16.0",
     "@types/lodash": "^4.14.74",
     "@types/mocha": "^2.2.41",
