add test cases & fixed bugs

--- a/magda-gateway/package.json
+++ b/magda-gateway/package.json
@@ -56,6 +56,8 @@
     "@magda/scripts": "^0.0.56-0",
     "@types/chai": "^4.0.1",
     "@types/compression": "^0.0.36",
+    "@types/cookie": "^0.3.3",
+    "@types/cookie-signature": "^1.0.3",
     "@types/cors": "^2.8.1",
     "@types/ejs": "^2.3.33",
     "@types/escape-string-regexp": "^1.0.0",
@@ -77,6 +79,8 @@
     "@types/urijs": "^1.15.34",
     "@types/yargs": "^12.0.8",
     "chai": "^4.1.0",
+    "cookie": "^0.4.0",
+    "cookie-signature": "^1.1.0",
     "mocha": "^3.4.2",
     "nock": "git://github.com/magda-io/nock.git#master",
     "randomstring": "^1.1.5",
