--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -72,6 +72,7 @@
     "@storybook/addons": "^3.3.3",
     "@storybook/react": "^3.2.17",
     "@types/debounce-promise": "^3.1.1",
+    "@types/jsonpath": "^0.2.0",
     "@types/papaparse": "^5.0.1",
     "@types/react": "^16.8.17",
     "@types/react-autosuggest": "^9.3.9",
@@ -79,6 +80,7 @@
     "@types/react-router": "^5.0.3",
     "@types/react-select": "^3.0.0",
     "@types/rrule": "^2.2.9",
+    "@types/smoothscroll-polyfill": "^0.3.1",
     "babel-core": "^6.26.0",
     "browser-detect": "^0.2.22",
     "d3-collection": "^1.0.4",
@@ -95,6 +97,7 @@
     "history": "^4.7.2",
     "html-truncate": "^1.2.2",
     "js-cookie": "^2.2.0",
+    "jsonpath": "^1.0.2",
     "leaflet-mapbox-vector-tile": "github:TerriaJS/Leaflet.MapboxVectorTile",
     "lodash": "^4.17.10",
     "markdown-it": "^8.4.0",
@@ -127,6 +130,7 @@
     "redux-mock-store": "^1.2.1",
     "redux-thunk": "^2.1.0",
     "rss-parser": "^2.9.0",
+    "smoothscroll-polyfill": "^0.4.4",
     "traverse": "^0.6.6",
     "typescript": "^3.5.3",
     "uuid": "^3.0.1",
