--- a/magda-datastore-api/tsconfig-build.json
+++ b/magda-datastore-api/tsconfig-build.json
@@ -4,7 +4,8 @@
         "lib": ["es2015", "es2017", "dom"],
         "declaration": true,
         "outDir": "dist",
-        "baseUrl": "."
+        "baseUrl": ".",
+        "types": ["mocha", "urijs"]
     },
     "include": ["src"]
 }
