--- a/magda-datastore-api/package.json
+++ b/magda-datastore-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/datastore-api",
-  "version": "0.0.56-nsw-5",
+  "version": "0.0.56-nsw-5a",
   "scripts": {
     "build": "yarn run compile",
     "compile": "tsc -p tsconfig-build.json",
