--- a/deploy/helm/magda/charts/web-server/templates/configmap.yaml
+++ b/deploy/helm/magda/charts/web-server/templates/configmap.yaml
@@ -20,5 +20,8 @@ data:
     "custodianOrgLevel": {{ toJson .Values.custodianOrgLevel | quote }},
     "maxChartProcessingRows": {{ toJson .Values.maxChartProcessingRows | quote }},
     "maxTableProcessingRows": {{ toJson .Values.maxTableProcessingRows | quote }},
-    "csvLoaderChunkSize": {{ toJson .Values.csvLoaderChunkSize | quote }}
+    "csvLoaderChunkSize": {{ toJson .Values.csvLoaderChunkSize | quote }},
+    {{- if .Values.mandatoryFields }}
+    "mandatoryFields": {{ toJson .Values.mandatoryFields | quote }}
+    {{- end }}
   }'
