--- a/deploy/helm/magda/charts/web-server/values.yaml
+++ b/deploy/helm/magda/charts/web-server/values.yaml
@@ -25,3 +25,16 @@ maxChartProcessingRows: 20000
 maxTableProcessingRows: 200
 # default chunk size 2MB
 csvLoaderChunkSize: 2097152
+mandatoryFields:
+  - $.dataset.title
+  - $.dataset.description
+  - $.dataset.defaultLicense
+  - $.files[*].title
+  - $.files[*].format
+  - $.files[*].license
+  - $.dataset.publisher
+  - $.licenseLevel
+  - $.dataset.defaultLicense
+  - $.files[*].license
+  - $.informationSecurity.classification
+  - $.informationSecurity.disseminationLimits
