Defaulting validation to on

--- a/magda-registry-api/src/main/resources/application.conf
+++ b/magda-registry-api/src/main/resources/application.conf
@@ -82,4 +82,4 @@ opa {
 }
 
 # whether validate received aspect data against aspect json schema
-validateJsonSchema = false
+validateJsonSchema = true
