--- a/magda-datastore-api/package.json
+++ b/magda-datastore-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/datastore-api",
-  "version": "0.0.56-nsw-5a",
+  "version": "0.0.56-nsw-5c",
   "scripts": {
     "build": "yarn run compile",
     "compile": "tsc -p tsconfig-build.json",
@@ -15,7 +15,9 @@
   "dependencies": {
     "@google-cloud/storage": "^4.1.0",
     "@magda/typescript-common": "^0.0.56-nsw-5",
+    "@types/lru-cache": "^5.1.0",
     "express": "^4.13.1",
+    "lru-cache": "^5.1.1",
     "yargs": "^12.0.5"
   },
   "devDependencies": {
