--- a/magda-migrator-session-db/package.json
+++ b/magda-migrator-session-db/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/migrator-session-db",
-  "version": "0.0.56-nsw-5",
+  "version": "0.0.56-terria-0",
   "description": "The database storing session information.",
   "scripts": {
     "dev": "echo \"No dev mode available, use helm instead.\"",
@@ -16,8 +16,8 @@
     }
   },
   "devDependencies": {
-    "@magda/db-migrator": "^0.0.56-nsw-5",
-    "@magda/scripts": "^0.0.56-nsw-5"
+    "@magda/db-migrator": "^0.0.56-terria-0",
+    "@magda/scripts": "^0.0.56-terria-0"
   },
   "magda": {
     "categories": {
