--- a/magda-scala-common/package.json
+++ b/magda-scala-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/scala-common",
-  "version": "0.0.56-nsw-5",
+  "version": "0.0.56-terria-0",
   "description": "Common Scala code shared between components.",
   "scripts": {
     "test": "cd .. && sbt common/test",
