--- a/magda-csw-connector/package.json
+++ b/magda-csw-connector/package.json
@@ -13,20 +13,21 @@
     "docker-build-local": "create-docker-context-for-node-component --build --push --tag auto --local",
     "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto",
     "retag-and-push": "retag-and-push",
-    "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/*.spec.ts\""
+    "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/csw.spec.ts\""
   },
   "license": "Apache-2.0",
   "devDependencies": {
     "@magda/scripts": "^0.0.56-0",
     "@types/jsonpath": "^0.1.29",
     "@types/lodash": "^4.14.66",
+    "@types/nock": "^9.3.0",
     "@types/read-pkg-up": "^3.0.1",
     "@types/request": "^2.48.1",
     "@types/urijs": "^1.15.34",
     "@types/xml2js": "0.0.33",
     "@types/xmldom": "^0.1.29",
     "@types/yargs": "^12.0.8",
-    "nock": "^11.7.0",
+    "nock": "^10.0.0",
     "ts-loader": "^2.3.7",
     "typescript": "^3.2.0",
     "webpack": "^3.6.0"
