Add storage-api's name to some deployment files

--- a/deploy/helm/magda/charts/gateway/values.yaml
+++ b/deploy/helm/magda/charts/gateway/values.yaml
@@ -4,7 +4,7 @@ service:
   type: NodePort
   externalPort: 80
   internalPort: 80
-  
+
 autoscaler:
   enabled: true
   minReplicas: 1
@@ -50,6 +50,8 @@ defaultRoutes:
   content:
     to: http://content-api/v0
     auth: true
+  storage:
+    to: http://storage-api/v0
   correspondence:
     to: http://correspondence-api/v0/public
   apidocs:
@@ -73,7 +75,7 @@ csp:
     - "''self''"
     - "blob:"
 
-cors: 
+cors:
   exposedHeaders:
   - "Content-Range"
   - "X-Content-Range"
