--- a/magda-typescript-common/tsconfig.json
+++ b/magda-typescript-common/tsconfig.json
@@ -1,12 +1,10 @@
 {
-    "extends": "./tsconfig-build.json",
+    "extends": "../tsconfig-global.json",
     "compilerOptions": {
+        "outDir": "dist",
         "baseUrl": ".",
-        "resolveJsonModule": true,
-        "paths": {
-            "@magda/registry-aspects/dist/*": [
-                "../node_modules/@magda/registry-aspects/src/*"
-            ]
-        }
-    }
+        "strictNullChecks": false
+    },
+    "include": ["src"],
+    "exclude": ["src/test/*"]
 }
