--- a/magda-storage-api/package.json
+++ b/magda-storage-api/package.json
@@ -13,13 +13,14 @@
     "retag-and-push": "retag-and-push"
   },
   "dependencies": {
-    "@magda/typescript-common": "^0.0.56-0",
     "@magda/content-schemas": "^0.0.56-0",
+    "@magda/typescript-common": "^0.0.56-0",
     "body-parser": "^1.13.2",
     "djv": "^2.1.1",
     "express": "^4.13.1",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.4",
+    "minio": "^7.0.12",
     "pg": "^6.4.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
@@ -33,6 +34,7 @@
     "@types/express": "^4.0.35",
     "@types/lodash": "^4.14.96",
     "@types/mime-types": "^2.1.0",
+    "@types/minio": "^7.0.4",
     "@types/mocha": "^2.2.47",
     "@types/nock": "^9.1.2",
     "@types/pg": "^6.1.41",
