--- a/magda-authorization-api/tsconfig.json
+++ b/magda-authorization-api/tsconfig.json
@@ -1,11 +1,9 @@
 {
-    "extends": "./tsconfig-build.json",
+    "extends": "../tsconfig-global.json",
     "compilerOptions": {
-        "baseUrl": ".",
-        "paths": {
-            "@magda/typescript-common/dist/*": [
-                "../node_modules/@magda/typescript-common/src/*"
-            ]
-        }
-    }
+        "outDir": "dist",
+        "strictNullChecks": false
+    },
+    "references": [{ "path": "../magda-typescript-common" }],
+    "include": ["src"]
 }
