--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ variables:
     -Dsbt.ivy.home=$CI_PROJECT_DIR/sbt-cache/ivy
   # If you changed dependencies (especially for scala), you might want to prevent your branch from using old cache by increase the version blew
   # gitlab actually use the same technique when you click the `Clear Cache Button` 
-  CACHE_VERSION: 3
+  CACHE_VERSION: 4
 
 stages:
   - builders
@@ -31,7 +31,6 @@ builders-and-yarn:
     key: $CI_JOB_NAME-$CACHE_VERSION
     paths:
       - .yarn
-      - "yarn.lock"
   before_script:
     - yarn config set cache-folder .yarn
     - yarn install
@@ -298,6 +297,7 @@ buildtest:typescript-apis:
     - pip3 install --upgrade pip
     - pip3 install docker-compose
     - docker-compose --version
+    - yarn # Just to make sure the artifacts are in sync
   cache:
     key: $CI_JOB_NAME-$CACHE_VERSION
     paths:
