--- a/magda-authorization-api/tsconfig.json
+++ b/magda-authorization-api/tsconfig.json
@@ -2,7 +2,9 @@
     "extends": "../tsconfig-global.json",
     "compilerOptions": {
         "outDir": "dist",
-        "strictNullChecks": false
+        "strictNullChecks": false,
+        "rootDir": "src",
+        "tsBuildInfoFile": "./tsconfig.tsbuildinfo"
     },
     "references": [{ "path": "../magda-typescript-common" }],
     "include": ["src"]
