--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -45,6 +45,7 @@
     "is-url-external": "^1.0.3",
     "leaflet": "^0.7.7",
     "mammoth": "^1.4.7",
+    "moment-timezone": "^0.5.27",
     "nlcst-to-string": "^2.0.2",
     "pdfjs-dist": "2.0.550",
     "react": "^16.8.6",
