remove dist & tsconfig.tsbuildinfo before build

--- a/magda-authorization-api/package.json
+++ b/magda-authorization-api/package.json
@@ -2,6 +2,7 @@
   "name": "@magda/authorization-api",
   "version": "0.0.56-0",
   "scripts": {
+    "prebuild": "rimraf dist tsconfig.tsbuildinfo",
     "build": "yarn run compile",
     "compile": "tsc -b",
     "watch": "tsc -b --watch",
