--- a/magda-typescript-common/package.json
+++ b/magda-typescript-common/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.56-0",
   "license": "Apache-2.0",
   "scripts": {
+    "prebuild": "rimraf dist tsconfig.tsbuildinfo",
     "build": "yarn run compile",
     "compile": "tsc -b",
     "watch": "tsc -b --watch",
