--- a/magda-content-schemas/package.json
+++ b/magda-content-schemas/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/content-schemas",
-  "version": "0.0.56-0",
+  "version": "0.0.56-RC3",
   "description": "Common schemas for use with the content api.",
   "scripts": {},
   "author": "",
