--- a/magda-typescript-common/package.json
+++ b/magda-typescript-common/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@magda/typescript-common",
   "description": "Common TypeScript code shared between components.",
-  "version": "0.0.56-0",
+  "version": "0.0.56-RC3",
   "license": "Apache-2.0",
   "scripts": {
     "build": "yarn run compile",
@@ -15,8 +15,8 @@
     "dev": "yarn run watch"
   },
   "devDependencies": {
-    "@magda/registry-aspects": "^0.0.56-0",
-    "@magda/scripts": "^0.0.56-0",
+    "@magda/registry-aspects": "^0.0.56-RC3",
+    "@magda/scripts": "^0.0.56-RC3",
     "@types/chai": "^4.0.0",
     "@types/chai-as-promised": "^7.1.0",
     "@types/express": "^4.0.35",
@@ -36,11 +36,11 @@
     "jsverify": "^0.8.2",
     "lazy-seq": "^1.0.0",
     "mocha": "^3.4.2",
+    "mock-req-res": "^1.1.1",
     "nock": "^9.0.14",
     "nyc": "^13.1.0",
     "sinon": "^4.2.1",
-    "typescript": "^3.2.0",
-    "mock-req-res": "^1.1.1"
+    "typescript": "^3.2.0"
   },
   "dependencies": {
     "@types/request": "^2.48.1",
