--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "lerna": "^2.11.0",
     "lodash": "^4.17.5",
     "prettier": "^1.16.4",
-    "pretty-quick": "^1.3.0"
+    "pretty-quick": "^1.3.0",
+    "rimraf": "^3.0.0"
   },
   "scripts": {
     "build": "lerna run build --stream --concurrency=1",
