--- a/magda-typescript-common/package.json
+++ b/magda-typescript-common/package.json
@@ -20,6 +20,7 @@
     "@magda/scripts": "^0.0.56-0",
     "@types/chai": "^4.0.0",
     "@types/chai-as-promised": "^7.1.0",
+    "@types/cross-spawn": "^6.0.1",
     "@types/express": "^4.0.35",
     "@types/lodash": "^4.14.73",
     "@types/mocha": "^2.2.41",
@@ -37,11 +38,11 @@
     "jsverify": "^0.8.2",
     "lazy-seq": "^1.0.0",
     "mocha": "^3.4.2",
+    "mock-req-res": "^1.1.1",
     "nock": "^9.0.14",
     "nyc": "^13.1.0",
     "sinon": "^4.2.1",
-    "typescript": "^3.7.2",
-    "mock-req-res": "^1.1.1"
+    "typescript": "^3.7.2"
   },
   "dependencies": {
     "@types/request": "^2.48.1",
