--- a/magda-csw-connector/package.json
+++ b/magda-csw-connector/package.json
@@ -3,17 +3,18 @@
   "description": "MAGDA OGC Catalogue Service for the Web (CSW) Connector",
   "version": "0.0.56-0",
   "scripts": {
+    "prebuild": "rimraf dist tsconfig.tsbuildinfo",
     "build": "yarn run compile",
     "compile": "yarn run compile-node && yarn run compile-browser",
-    "compile-node": "tsc -p tsconfig-build.json",
+    "compile-node": "tsc -b",
     "compile-browser": "webpack --config src/webpack.config.js",
-    "watch": "tsc -p tsconfig-build.json --watch",
+    "watch": "tsc -b --watch",
     "start": "node dist/index.js",
     "dev": "run-typescript-in-nodemon src/index.ts",
     "docker-build-local": "create-docker-context-for-node-component --build --push --tag auto --local",
     "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto",
     "retag-and-push": "retag-and-push",
-    "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/*.spec.ts\""
+    "test": "mocha --require ts-node/register --require tsconfig-paths/register \"src/test/**/*.spec.ts\""
   },
   "license": "Apache-2.0",
   "devDependencies": {
@@ -29,8 +30,10 @@
     "@types/yargs": "^12.0.8",
     "nock": "^10.0.0",
     "ts-loader": "^6.2.1",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.7.2",
-    "webpack": "^4.28.3"
+    "webpack": "^4.28.3",
+    "webpack-cli": "^3.3.10"
   },
   "dependencies": {
     "@magda/registry-aspects": "^0.0.56-0",
