--- a/magda-esri-portal-connector/package.json
+++ b/magda-esri-portal-connector/package.json
@@ -3,11 +3,12 @@
   "description": "MAGDA Esri Portal Connector",
   "version": "0.0.56-0",
   "scripts": {
+    "prebuild": "rimraf dist tsconfig.tsbuildinfo",
     "build": "yarn run compile",
     "compile": "yarn run compile-node && yarn run compile-browser",
-    "compile-node": "tsc -p tsconfig-build.json",
+    "compile-node": "tsc -b",
     "compile-browser": "webpack --config src/webpack.config.js",
-    "watch": "tsc -p tsconfig-build.json --watch",
+    "watch": "tsc -b --watch",
     "start": "node dist/index.js",
     "dev": "run-typescript-in-nodemon src/index.ts",
     "docker-build-local": "create-docker-context-for-node-component --build --push --tag auto --local",
@@ -28,8 +29,10 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "ts-loader": "^6.2.1",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.7.2",
-    "webpack": "^4.28.3"
+    "webpack": "^4.28.3",
+    "webpack-cli": "^3.3.10"
   },
   "dependencies": {
     "@magda/registry-aspects": "^0.0.56-0",
