--- a/magda-web-server/package.json
+++ b/magda-web-server/package.json
@@ -4,9 +4,10 @@
   "version": "0.0.56-0",
   "license": "Apache-2.0",
   "scripts": {
+    "prebuild": "rimraf dist tsconfig.tsbuildinfo",
     "build": "yarn run compile",
-    "compile": "tsc -p tsconfig-build.json",
-    "watch": "tsc -p tsconfig-build.json --watch",
+    "compile": "tsc -b",
+    "watch": "tsc -b --watch",
     "start": "node dist/index.js",
     "dev": "run-typescript-in-nodemon src/index.ts --baseExternalUrl=http://localhost:6107/ --baseUrl=http://dev.magda.io/",
     "docker-build-local": "create-docker-context-for-node-component --build --push --tag auto --local",
