--- a/magda-minion-format/tsconfig.json
+++ b/magda-minion-format/tsconfig.json
@@ -1,17 +1,14 @@
 {
-    "extends": "./tsconfig-build.json",
+    "extends": "../tsconfig-global.json",
     "compilerOptions": {
-        "baseUrl": ".",
-        "paths": {
-            "@magda/registry-aspects/dist/*": [
-                "../node_modules/@magda/registry-aspects/src/*"
-            ],
-            "@magda/minion-framework/dist/*": [
-                "../node_modules/@magda/minion-framework/src/*"
-            ],
-            "@magda/typescript-common/dist/*": [
-                "../node_modules/@magda/typescript-common/src/*"
-            ]
-        }
-    }
+        "outDir": "./dist",
+        "strictNullChecks": false,
+        "rootDir": "./src",
+        "tsBuildInfoFile": "./tsconfig.tsbuildinfo"
+    },
+    "references": [
+        { "path": "../magda-typescript-common" },
+        { "path": "../magda-minion-framework" }
+    ],
+    "include": ["./src", "./src/**/*.json"]
 }
