--- a/magda-authorization-api/package.json
+++ b/magda-authorization-api/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "prebuild": "rimraf dist tsconfig.tsbuildinfo",
     "build": "yarn run compile",
-    "compile": "tsc -b",
+    "compile": "tsc -b && babel dist -d dist",
     "watch": "tsc -b --watch",
     "start": "node dist/index.js",
     "dev": "export PGUSER=client && export JWT_SECRET=squirrel && run-typescript-in-nodemon src/index.ts",
