--- a/magda-esri-portal-connector/package.json
+++ b/magda-esri-portal-connector/package.json
@@ -6,7 +6,7 @@
     "prebuild": "rimraf dist tsconfig.tsbuildinfo",
     "build": "yarn run compile",
     "compile": "yarn run compile-node && yarn run compile-browser",
-    "compile-node": "tsc -b",
+    "compile-node": "tsc -b && babel dist -d dist",
     "compile-browser": "webpack --config src/webpack.config.js",
     "watch": "tsc -b --watch",
     "start": "node dist/index.js",
